[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/scenes/CameraRig.gd" type="Script" id=1]
[ext_resource path="res://objects/UI/map_maker/EditMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/HexGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/scenes/BattleController.tscn" type="PackedScene" id=4]
[ext_resource path="res://resources/themes/hk_grotesk.tres" type="Theme" id=5]
[ext_resource path="res://resources/themes/custom/new_theme2.tres" type="Theme" id=6]
[ext_resource path="res://objects/UI/EditButton.gd" type="Script" id=7]
[ext_resource path="res://objects/scenes/WorldScene.gd" type="Script" id=8]
[ext_resource path="res://objects/UI/ConsoleControl.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/environment/WorldScene.tres" type="Environment" id=11]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
params_diffuse_mode = 4
params_specular_mode = 3
albedo_color = Color( 0.0862745, 0.270588, 0.105882, 1 )

[sub_resource type="BoxShape" id=5]

[node name="WorldScene" type="Spatial"]
script = ExtResource( 8 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 11 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.939693, 0.262002, -0.219846, 0, 0.642788, 0.766044, 0.34202, 0.719846, -0.604023, 0, 0, 0 )
light_energy = 1.5
shadow_enabled = true
shadow_color = Color( 0.501961, 0.501961, 0.501961, 1 )
shadow_contact = 0.1
directional_shadow_split_1 = 0.2
directional_shadow_split_2 = 0.3
directional_shadow_split_3 = 0.6
directional_shadow_blend_splits = true
directional_shadow_max_distance = 160.0

[node name="BattleController" parent="." instance=ExtResource( 4 )]

[node name="HexGrid" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0.000358689, -0.000276444, -0.000358638, 1, 0.000183738, 0.000276509, -0.000183639, 1, 0, 0, 0 )

[node name="WorldMesh" type="StaticBody" parent="."]
transform = Transform( 80, 0, 0, 0, 1, 0, 0, 0, 80, 0, -1, 0 )

[node name="MeshInstance" type="MeshInstance" parent="WorldMesh"]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="WorldMesh"]
shape = SubResource( 5 )

[node name="EditButton" type="Button" parent="."]
margin_right = 12.0
margin_bottom = 20.0
theme = ExtResource( 6 )
action_mode = 0
text = "Edit"
script = ExtResource( 7 )

[node name="PlayButton" type="Button" parent="."]
visible = false
margin_left = 48.0
margin_right = 86.0
margin_bottom = 20.0
theme = ExtResource( 6 )
action_mode = 0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditModeLabel" type="Label" parent="."]
visible = false
margin_left = 96.0
margin_top = 3.0
margin_right = 160.0
margin_bottom = 17.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Edit Mode"

[node name="EditMenu" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = 8.80003
margin_bottom = 157.8

[node name="WindowDialog" type="AcceptDialog" parent="."]
margin_right = 48.0
margin_bottom = 40.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraRig" type="Spatial" parent="."]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707106, 0, 0.707107, 0.707106, 0, 0, 0 )
script = ExtResource( 1 )
tilt_amount = 15
min_tilt = 75
max_tilt = 0

[node name="Camera" type="Camera" parent="CameraRig"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 55, 0 )
current = true
fov = 22.0
far = 200.0

[node name="MenuControl" type="Control" parent="."]
margin_left = 1088.0
margin_right = 1280.0
margin_bottom = 192.0
theme = ExtResource( 6 )

[node name="Menu" type="Button" parent="MenuControl"]
margin_left = 46.0
margin_top = 8.0
margin_right = 184.0
margin_bottom = 27.0
text = "Back To Main Menu"

[node name="ConsoleControl" parent="." instance=ExtResource( 9 )]

[connection signal="pressed" from="EditButton" to="EditMenu" method="_on_EditButton_pressed"]
[connection signal="pressed" from="PlayButton" to="HexGrid" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuControl/Menu" to="." method="_on_Menu_pressed"]
